--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -44,6 +44,6 @@
 	<h3>How long to cook the lasagna</h3>
 	<p>The assembled lasagna should take about 50 minutes to cook in an oven preheated to 375 degrees F. Cover it with foil for the first 25 minutes, then let it cook uncovered for the final 25 minutes. Also, it's important to let the lasagna rest at room temperature for about 15 minutes before you cut into it.</p>
 	<p><a href="./lasagna.html">Return to top</a></p>
-	<a href="../index.html">Odin recipes</a>
+	<button><a href="../index.html">Odin recipes</a></button>
 </body>
 </html>
